java 5
git-svn-id: https://scm.mmbase.org/mmbase/trunk@24471 91430c5f-d668-0410-9e7d-dd663366dcfd